V01-01-02

* Removed noise parameter injector in tray segment that was overriding GCD parameters.
* Switched out the inice and icetop options for a new OMTypes option. 
  This takes a list of OMTypes from I3OMGeo in order to grant some more
  freedom for the future. By default, this will be IceCube, mDOM, pDOM,
  and dEgg. I'll add parameters files for these other pmt types later.

June 22, 2018 Juan Carlos Diaz-Velez (juancarlso@icecube.wisc.edu)
------------------------------------------------------------------
V01-01-01

* Minor cleanup of import statements

Nov 3, 2017 Juan Carlos Diaz-Velez (juancarlso@icecube.wisc.edu)
----------------------------------------------------------------
V01-01-00

* Preserve parent information for compressed MCPEs.

April 24, 2017 Juan Carlos Diaz-Velez (juancarlso@icecube.wisc.edu)
-------------------------------------------------------------------
V01-00-08

* Updates to tests and docs


March 24, 2017 Juan Carlos Diaz-Velez (juancarlso@icecube.wisc.edu)
-------------------------------------------------------------------
V01-00-07

* Removed dependence on I3MCEventHeaderGenerator

July 22, 2015 Michael Larson (mjlarson@nbi.ku.dk)
-------------------------------------------------

* Apparently forgot to change the default values for each of the 
  noise parameters. These only affect PINGU/HEX DOMs and DOMs that are
  missing a good calibration record. The default values are now set to
  the median values as measured by IC86 good-fit DOMs.

July 3, 2015 Michael Larson (mjlarson@nbi.ku.dk)
------------------------------------------------

* Added support for the short-timescale noise that wasn't supported 
  previously in Vuvuzela. To this end, a new option was added to 
  enable/disable the low-dt distribution. New noise parameters were
  added in the resources/data/ directory and those will be used by 
  default for the tray segment. 
* Removed the "ForceRelativeToZero" option, which was unused.